# CryptoTracker

./: .gitignore  Dockerfile  Dockerfile-mongodb  README.md  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml
src/api/: main.py  user_menagment.py
src/api/controllers/: coins.py  main.py  user.py  user_menagment.py  user_templates.py  utils_generate_template.py
src/api/controllers/user/: user_menagment.py  user_templates.py
src/api/fastapi_bg_tasks/: user_tasks.py
src/business_logic/coin/: dto.py  exceptions.py  logic.py
src/business_logic/user/: auth_utils.py  dto.py  main.py
src/crypto_api/: binance_websocket.py  main.py
src/db/: main.py  stream_coin_collection.py
src/db/dao/: base.py  coin_dao.py  tracking_crypto_dao.py  user_dao.py
src/db/models/: coin.py  price_log.py  tracking_crypto.py  user.py
src/dishka/: container.py  provider.py
src/infrastructure/price_service/: exceptions.py  logic.py
src/kafka/: kafka_admin.py
src/kafka/consumers/: crypto_kafka_consumer.py
src/kafka/producers/: crypto_kafka_producer.py
src/smtp/: main.py  models.py  send_mail.py  utils.py
src/taskiq/: __init__.py  main.py  tasks.py
src/temporary_storage/: interface.py  redis_storage.py
static/css/: verify.css
static/js/: verify.js
static/templates/: mail.html  verify.html
tests/: conftest.py
tests/fixtures/: client.py  tracked_coin_fixtures.py  user_fixtures.py
tests/test_api/handlers/: test_auth_users.py  test_fastapi_users.py  test_tracking_coins.py
