[tool.poetry]
name = "crud-mongo"
version = "0.1.0"
description = ""
authors = ["Misha <290819allo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.2"}
motor = "^3.4.0"
fastapi-users = {extras = ["beanie"], version = "^13.0.0"}
taskiq = {extras = ["zmq"], version = "^0.11.3"}
taskiq-fastapi = "^0.3.1"
redis = "^5.0.4"
taskiq-redis = "^0.5.6"
dishka = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
