[tool.poetry]
name = "crud-mongo"
version = "0.1.0"
description = ""
authors = ["Misha <mi.khmilenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.2"}
motor = "^3.4.0"
fastapi-users = {extras = ["beanie"], version = "^13.0.0"}
taskiq = {extras = ["zmq"], version = "^0.11.3"}
taskiq-fastapi = "^0.3.1"
redis = "^5.0.4"
taskiq-redis = "^0.5.6"
dishka = "^1.1.1"
streamlit = "^1.36.0"
kafka-python = "^2.0.2"
aiokafka = "^0.11.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
